<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".addstory.AddStoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivAddPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/add_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSelectGallery"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/select_photo"
                android:text="@string/select_gallery"
                android:textColor="@color/background" />

            <Button
                android:id="@+id/btnSelectCamera"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/select_photo"
                android:text="@string/select_camera"
                android:textColor="@color/background" />
        </LinearLayout>

        <EditText
            android:id="@+id/edAddDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minHeight="100dp"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/add_story"
            android:text="@string/add_story"
            android:textColor="@color/background" />
    </LinearLayout>
</ScrollView>
